feat(football league): adding logger for console

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
- spring.main.allow-bean-definition-overriding=true
+spring.main.allow-bean-definition-overriding=true
+
+# to log on console
+logging.level.root = DEBUG
